docs: minor fix

--- a/extensions/containers/services/Dockerfile
+++ b/extensions/containers/services/Dockerfile
@@ -1,6 +1,7 @@
 FROM ghcr.io/diracgrid/diracx/services:dev
 
-#Extension
+# Instructs the entrypoint to overwrite
+ENV DIRACX_EXTENSIONS="gubbins,diracx"
 ENV GUBBINS_IMAGE_PACKAGES=core,db,routers,client
 
 ARG EXTRA_PACKAGES_TO_INSTALL
