fix: added mermaid plugin to mkdocs dependencies

--- a/pixi.toml
+++ b/pixi.toml
@@ -109,6 +109,7 @@ description = "Run the tests for gubbins-routers"
 python = "*"
 [feature.mkdocs.pypi-dependencies]
 mkdocs-material = "*"
+mkdocs-mermaid2-plugin = "*"
 mkdocs-diracx-plugin = { git = "https://github.com/DIRACGrid/mkdocs-diracx-plugin.git", branch = "master"}
 [feature.mkdocs.tasks]
 mkdocs = "mkdocs serve"
