--- a/extensions/gubbins_values.yaml
+++ b/extensions/gubbins_values.yaml
@@ -1,17 +1,8 @@
-# values specific to testing gubbins
-global:
-  # Needed to be able to force pre-load the image in kind
-  # see https://kind.sigs.k8s.io/docs/user/quick-start/#loading-an-image-into-your-cluster
-  # and https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
-  imagePullPolicy: IfNotPresent
-  images:
-    services: gubbins/services
-    tag: dev
-
-developer:
-  enabled: true
-
+# CI-specific values for testing gubbins
+# Base gubbins configuration is in gubbins-charts/values.yaml
 diracx:
-  sqlDbs:
-    dbs:
-      LollygagDB:
+  global:
+    # Needed to be able to force pre-load the image in kind
+    # see https://kind.sigs.k8s.io/docs/user/quick-start/#loading-an-image-into-your-cluster
+    # and https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
+    imagePullPolicy: IfNotPresent
