--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -89,7 +89,7 @@ repos:
     hooks:
       - id: settings-doc-check
         name: Generate settings documentation
-        entry: scripts/check_settings_doc.sh
+        entry: pixi run -e default python scripts/generate_settings_docs.py
         language: system
         pass_filenames: false
-        files: ^diracx-core/src/diracx/core/settings\.py$
+        files: ^(diracx-.*/src/diracx/.*/settings\.py|docs/.*\.j2|docs/templates/.*\.jinja|scripts/generate_settings_docs\.py)$
