docs: add OpenAPI route documentation with neoteroi plugin
Add comprehensive REST API route documentation automatically generated
from the OpenAPI specification using the neoteroi-mkdocs plugin.

Changes:
- Add neoteroi CSS styling (v1.1.3) for OpenAPI documentation rendering
- Create generate_openapi_spec.py script to generate docs/openapi.json
- Add docs/dev/reference/routes/index.md with route documentation page
- Integrate neoteroi.mkdocsoad plugin in mkdocs.yml configuration
- Add generate-openapi-spec pixi task for OpenAPI spec generation
- Make mkdocs-build depend on generate-openapi-spec task
- Add generate-entrypoints-docs pre-commit hook
- Exclude docs/dev/reference/api/ from mdformat to preserve indentation
- Ignore generated docs/openapi.json and Copilot instructions in git
- Update routers index page to clarify REST API vs infrastructure docs
- Fix mkdocstrings directive indentation across API reference docs
- Enhance router documentation with better descriptions and examples

The OpenAPI spec generation uses test fixtures similar to the test suite,
creating a minimal DiracX app with test auth settings, config repository,
and database URLs. The spec is generated before each documentation build.

The neoteroi plugin renders the OpenAPI spec into human-readable route
documentation with request/response examples, while mdformat exclusion
preserves the required indentation for mkdocstrings YAML options.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ default_language_version:
   python: python3
 
 ci:
-  skip: [generate-pixi-docs, settings-doc-check, api-doc-coverage-check]
+  skip: [generate-pixi-docs, settings-doc-check, api-doc-coverage-check, generate-entrypoints-docs]
 
 default_stages: [pre-commit]
 
@@ -60,6 +60,7 @@ repos:
       - mdformat-mkdocs
       - mdformat-gfm
       - mdformat-black
+      exclude: ^docs/dev/reference/api/
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
@@ -102,3 +103,12 @@ repos:
         language: system
         pass_filenames: false
         files: ^(diracx-.*/src/diracx/.*\.py|docs/dev/reference/api/.*\.md|docs/dev/reference/api/check_coverage\.py)$
+
+  - repo: local
+    hooks:
+      - id: generate-entrypoints-docs
+        name: Generate entry points documentation
+        entry: pixi run -e default python scripts/generate_entrypoints_docs.py
+        language: system
+        pass_filenames: false
+        files: ^(diracx-.*/pyproject\.toml|extensions/.*/pyproject\.toml|scripts/generate_entrypoints_docs\.py)$
