docs: Add DiracX tasks architecture explanation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,6 +168,7 @@ nav:
       - Run demo: dev/explanations/run_demo.md
       - Extensions: dev/explanations/extensions.md
       - Designing functionality: dev/explanations/designing-functionality.md
+      - Tasks: dev/explanations/tasks-architecture.md
     - Reference:
       - dev/reference/index.md
       - Dev env variables: dev/reference/env-variables.md
