--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,13 +60,19 @@ repos:
         additional_dependencies:
           - mdformat-mkdocs
           - mdformat-gfm
-          - mdformat-black
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
       - id: codespell
         args: ["-w"]
+
+  - repo: https://github.com/adamchainz/blacken-docs
+    rev: 1.20.0
+    hooks:
+      - id: blacken-docs
+        additional_dependencies:
+          - black==22.12.0
 
   - repo: local
     hooks:
